Finished the basics

--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    
 
+    <input type="text" id="book" placeholder="Enter your book">
+    <input type="text" id="author" placeholder="Enter author">
+    <input type="text" id="pages" placeholder="Enter pages">
+    Read? <input type="checkbox" id="read" placeholder="read">
+
+    <button type="button" id="addBook"> click me </button>
+    <div id="content"> 
+        <ul id="list">
+        </ul>
+    </div>
+
+    <script src="script.js"></script>
+
+</body>
+</html>
